src/rtapi/rtapi.h

RTAPI_BEGIN_DECLS

/***********************************************************************
*                   GENERAL PURPOSE FUNCTIONS                          *
************************************************************************/

/**
 * @brief Sets up the RTAPI.
 *
 * It must be called by any module that intends to use the API, before any other
 * RTAPI calls.
 * @param modname Can optionally point to a string that identifies the module.
 *                The string will be truncated at ::RTAPI_NAME_LEN characters.
 *                If @c modname is @c NULL, the system will assign a name.
 * @return On success, returns a positive integer module ID, which is used for
 *         subsequent calls to rtapi_xxx_new(), rtapi_xxx_delete(), and
 *         rtapi_exit(). Negative value on failure.
 * @note Call only from within user or init/cleanup code, not from realtime
 *       tasks.
 */
    extern int rtapi_init(const char *modname);
/**
 * @brief Shuts down and cleans up the RTAPI.
 *
 * It must be called prior to exit by any module that called rtapi_init().
 * rtapi_exit() may attempt to clean up any tasks, shared memory, and other
 * resources allocated by the module, but should not be relied on to replace
 * proper cleanup code within the module.
 * @param module_id ID returned when that module called rtapi_init().
 * @return 0 on success, negative value on failure.
 * @note Call only from user or init/cleanup code, not from realtime tasks.
 */
    extern int rtapi_exit(int module_id);
/** Message levels */
    typedef enum {
	RTAPI_MSG_NONE = 0,
	RTAPI_MSG_ERR,
	RTAPI_MSG_WARN,
	RTAPI_MSG_INFO,
	RTAPI_MSG_DBG,
	RTAPI_MSG_ALL
    } msg_level_t;
/**
 * @brief Prints a printf-style message when the level is less than or equal to
 * the current message level set by rtapi_set_msg_level().
 * @note May be called from user, init/cleanup, and realtime code.
 */
    extern void rtapi_print_msg(msg_level_t level, const char *fmt, ...)
	    __attribute__((format(printf,2,3)));
/**
 * @brief Set the message handler.
 *
 * rtapi_get_msg_handler() and rtapi_set_msg_handler() access the function
 * pointer used by rtapi_print() and rtapi_print_msg(). By default, messages
 * appear in the kernel log, but by replacing the handler a user of the rtapi
 * library can send the messages to another destination.
 * @note Call from real-time init/cleanup code only.
 * @note When called from rtapi_print(), @c level is ::RTAPI_MSG_ALL,
 *       a level which should not normally be used with rtapi_print_msg().
 */
    typedef void(*rtapi_msg_handler_t)(msg_level_t level, const char *fmt, va_list ap);
    extern void rtapi_set_msg_handler(rtapi_msg_handler_t handler);
    extern rtapi_msg_handler_t rtapi_get_msg_handler(void);
/**
 * @brief Returns the current time in nanoseconds.
 *
 * Depending on the RTOS, this may be time since boot, or time since the clock
 * period was set, or some other time. Its absolute value means nothing, but it
 * is monotonically increasing and can be used to schedule future events, or to
 * time the duration of some activity. Returns a 64 bit value. The resolution of
 * the returned value may be as good as one nano-second, or as poor as several
 * microseconds.
 *
 * Most time measurements are relative, and should be done like this:
 * @code
 * deltat = (long int)(end_time - start_time);
 * @endcode
 * where @c end_time and @c start_time are longlong values returned from
 * rtapi_get_time(), and @c deltat is an ordinary long int (32 bits). This will
 * work for times up to about 2 seconds.
 *
 * @note May be called from init/cleanup code, and from within realtime tasks.
 * @note The longlong may be poorly supported on some platforms, especially
 *       within kernel space.
 * @note rtapi_print() will NOT print longlong values.
 * @return Current time in nanoseconds
 */
    extern long long int rtapi_get_time(void);
 /**
  * @brief Creates but does not start a realtime task.
  *
  * The task is created in the "paused" state. To start it, call either
  * rtapi_task_start() for periodic tasks, or rtapi_task_resume() for
  * free-running tasks.
  *
  * @c taskcode is the name of a function taking one int and returning void,
  * which contains the task code. @c arg will be passed to @c taskcode as an
  * arbitrary void pointer when the task is started, and can be used to pass any
  * amount of data to the task (by pointing to a struct, or other such tricks).
  *
  * @param taskcode Pointer to the function to be called when the task is
  *                 started.
  * @param arg Argument to be passed to the taskcode function.
  * @param prio Priority of the task, determined by one of rtapi_prio_xxxx().
  * @param owner ID of the module that is making the call see rtapi_init().
  * @param stacksize The amount of stack to be used for the task, be generous,
  *                  hardware interrupts may use the same stack.
  * @return On success, returns a positive integer task ID, @c task_id. This ID
  *         is used for all subsequent calls that need to act on the task. On
  *         failure, returns a negative error code as listed above.
 * @note Call only from within init/cleanup code, not from realtime tasks.
 */
    extern int rtapi_task_new(void (*taskcode) (void *), void *arg,
	int prio, int owner, unsigned long int stacksize);
/***********************************************************************
*                  SHARED MEMORY RELATED FUNCTIONS                     *
************************************************************************/

/**
 * @brief Allocates a block of shared memory.
 *
 * All modules wishing to access the same memory must use the same @c key. The
 * block will be at least @c size bytes, and may be rounded up. Allocating many
 * small blocks may be very wasteful. When a particular block is allocated for
 * the first time, all bytes are zeroed. Subsequent allocations of the same
 * block by other modules or processes will not touch the contents of the block.
 * @param key Identifier for the memory block must be non-zero.
 * @param module_id ID of the calling module.
 * @param size Desired size of the shared memory block, in bytes.
 * @return On success, it returns a positive integer ID, which is used for
           all subsequent calls dealing with the block. On failure it returns a
           negative error code.
 * @note Call only from within user or init/cleanup code, not from realtime
 *       tasks.
 */
    extern int rtapi_shmem_new(int key, int module_id,
	unsigned long int size);
/**
 * @brief Frees the shared memory block associated with @c shmem_id.
 * @param shmem_id ID of the shared memory block created with rtapi_shmem_new().
 * @param module_id ID of the calling module.
 * @return 0 on success, negative value on failure.
 * @note Call only from within user or init/cleanup code, not from realtime
 *       tasks.
 */
    extern int rtapi_shmem_delete(int shmem_id, int module_id);
/**
 * @brief Sets @c *ptr to point to shared memory block associated with
 *         @c shmem_id.
 * @param shmem_id ID of the shared memory block created with rtapi_shmem_new().
 * @param ptr Pointer to shared memory block.
 * @return 0 on success, negative value on failure.
 * @note May be called from user code, init/cleanup code, or realtime tasks.
 */
    extern int rtapi_shmem_getptr(int shmem_id, void **ptr);
/**
 * @brief Set up a handler for a hardware interrupt.
 * @param irq_num Interrupt number.
 * @param owner ID of the calling module, see rtapi_init().
 * @param handler Function pointer,taking no arguments and returning void.
 *                @c handler will be called when the interrupt occurs.
 * @return 0 on successfully installing the handler, negative value on failure.
 * @note The simulated RTOS does not support interrupts.
 * @note Call only from within init/cleanup code, not from realtime tasks.
 */
    extern int rtapi_irq_new(unsigned int irq_num, int owner,
	void (*handler) (void));